# digital-forensics-automated-reporting

./: .gitignore  README.md  index.html  main.py  package-lock.json  requirements-dev.txt  requirements.txt
app/: __init__.py  agent_zero_client.py  api_routes.py  api_tokens.py  audit.py  auth.py  auth_routes.py  config.py  crypto.py  database.py  drives.py  file_metadata.py  flask_app.py  mailer.py  models.py  paths.py  report_generator.py  routes.py  update_key.py  updater.py
app/schema/: database_schema.sql
app/templates/: base.html  case_detail.html  case_edit.html  case_form.html  dashboard.html  link_analysis.html  report_preview.html
docs/: phase2_smoke_test.py  phase3_smoke_test.py  phase4_integration_test.py  phase4_smoke_test.py  phase6_smoke_test.py  sec-1-auth-architecture-review.md  sec-3-file-upload-review.md  sec-4-5-network-review.md  sec-8-packaging-review.md  sec-9-final-release-review.md  v2-migration-spec.md  v2-project-plan.md
packaging/: build.py  dfars-desktop.spec  installer.iss  keygen.py  sign_release.py  version_info.txt
scratch/fernet_compat/: RESULT.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: probe_v1_db.rs
src-tauri/migrations/auth/: 0001_init.sql
src-tauri/migrations/forensics/: 0002_person_fields.sql  0002_tool_evidence_id.sql  0003_reproduction_fields.sql  0004_person_identifiers.sql  0005_business_identifiers.sql  0006_discovered_via_tool.sql  0007_analysis_validation_fields.sql
src-tauri/src/: agent_zero.rs  audit.rs  axum_server.rs  config.rs  crypto.rs  drives.rs  error.rs  forensic_tools.rs  lib.rs  mailer.rs  osint_extraction.rs  reports.rs  state.rs  test_helpers.rs  uploads.rs
src-tauri/src/auth/: lockout.rs  session.rs  tokens.rs  totp.rs
src-tauri/src/commands/: ai_cmd.rs  auth_cmd.rs  cases_cmd.rs  drives_cmd.rs  files_cmd.rs  integrations_cmd.rs  link_analysis_cmd.rs  records_cmd.rs  reports_cmd.rs  system_cmd.rs  updates_cmd.rs
src-tauri/src/db/: analysis.rs  analysis_reviews.rs  business_identifiers.rs  cases.rs  custody.rs  entities.rs  events.rs  evidence.rs  evidence_files.rs  graph.rs  hashes.rs  inspector.rs  links.rs  mod.rs  person_employers.rs  person_identifiers.rs  tools.rs
src-tauri/tests/: phase1_auth_integration.rs  phase2_cases_integration.rs  phase3a_records_integration.rs  phase3b_files_integration.rs  phase4_link_analysis_integration.rs  phase5_network_integration.rs  phase6_packaging_integration.rs
src/__tests__/: agent-zero-schema.test.ts  analysis-form.test.tsx  analysis-review-dialog.test.tsx  analysis-review-schema.test.ts  analysis-schema.test.ts  business-identifier-schema.test.ts  crime-line-canvas.test.tsx  custody-schema.test.ts  error-toast.test.ts  event-schema.test.ts  evidence-files-bindings.test.ts  format-bytes.test.ts  graph-canvas.test.tsx  graph-focus.test.ts  link-analysis-enums.test.ts  link-schema.test.ts  node-inspector.test.tsx  person-identifier-schema.test.ts  react-lazy-boundary.test.tsx  smtp-schema.test.ts  update-check.test.tsx
src/components/: ai-consent-dialog.tsx  analysis-form.tsx  analysis-panel.tsx  analysis-review-dialog.tsx  business-card.tsx  business-form.tsx  business-identifier-editor.tsx  businesses-panel.tsx  case-form.tsx  crime-line-canvas.tsx  drive-picker.tsx  employer-combobox.tsx  entities-panel.tsx  entity-form.tsx  evidence-files-panel.tsx  evidence-form.tsx  evidence-panel.tsx  evidence-tools-panel.tsx  graph-canvas.tsx  hash-form.tsx  hash-panel.tsx  link-form.tsx  links-panel.tsx  node-inspector.tsx  person-card.tsx  person-form.tsx  person-identifier-editor.tsx  persons-panel.tsx  settings-header.tsx  source-tool-badge.tsx  tool-card.tsx  tool-form.tsx  tools-panel.tsx
v2/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
v2/src-tauri/: Cargo.toml  tauri.conf.json
v2/src-tauri/migrations/forensics/: 0001_init.sql
v2/src-tauri/src/: agent_zero.rs  audit.rs  axum_server.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  test_helpers.rs  uploads.rs
v2/src-tauri/src/auth/: argon.rs  lockout.rs  mod.rs  recovery.rs  session.rs  tokens.rs  totp.rs
v2/src-tauri/src/commands/: ai_cmd.rs  auth_cmd.rs  link_analysis_cmd.rs  mod.rs  system_cmd.rs  updates_cmd.rs
v2/src-tauri/src/db/: analysis.rs  cases.rs  entities.rs  mod.rs  tools.rs
v2/src-tauri/tests/: phase1_auth_integration.rs  phase2_cases_integration.rs  phase3a_records_integration.rs  phase3b_files_integration.rs  phase4_link_analysis_integration.rs  phase5_network_integration.rs
(+114 files in other folders)
