[package]
name = "dfars-desktop"
version = "2.0.0"
description = "DFARS Desktop — digital forensics case management and reporting"
authors = ["James Henning"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dfars_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Note: tauri-plugin-updater was wired as an inert placeholder in Phase 6,
# then removed per SEC-9 before v2.0.0 release (shipping a placeholder pubkey
# and unreachable endpoint is worse than not having the plugin at all). Auto-
# update will be reintroduced in a post-v2.0.0 release once a hosting story
# is chosen. See docs/v2-migration-spec.md §11 and docs/sec-9-final-release-review.md.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
keyring = "2"
fernet = { version = "0.2", default-features = false, features = ["rustcrypto"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
zeroize = { version = "1", features = ["derive"] }
data-encoding = "2"
sha2 = "0.10"
infer = "0.16"
unicode-normalization = "0.1"

# ─── Phase 5: axum REST API + outbound HTTP + mailer + drives ────────────────
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
http = "1"
bytes = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "tokio1-rustls-tls"] }
sysinfo = "0.32"
walkdir = "2"

[dev-dependencies]
# Ephemeral temp directories for integration tests that need on-disk SQLite.
tempfile = "3"
# Tokio test macro for async test functions.
tokio-test = "0.4"

