[package]
name = "dfars-desktop"
version = "0.1.0"
description = "DFARS Desktop — digital forensics case management and reporting"
authors = ["James Henning"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dfars_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
keyring = "2"
fernet = { version = "0.2", default-features = false, features = ["rustcrypto"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
zeroize = { version = "1", features = ["derive"] }
data-encoding = "2"
sha2 = "0.10"
infer = "0.16"
unicode-normalization = "0.1"

[dev-dependencies]
# Ephemeral temp directories for integration tests that need on-disk SQLite.
tempfile = "3"
# Tokio test macro for async test functions.
tokio-test = "0.4"

